--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,9 @@
     "angular": "^1.6.1",
     "materialize": "^0.97.8",
     "angular-cookies": "^1.6.1",
-    "angular-route": "^1.6.1"
+    "angular-route": "^1.6.1",
+    "sockjs": "^0.3.4",
+    "stomp-websocket": "^2.3.4",
+    "lodash": "^4.17.4"
   }
 }
